--- a/os/kickstart/local_disk-ks.cfg
+++ b/os/kickstart/local_disk-ks.cfg
@@ -12,7 +12,7 @@ keyboard --vckeymap=us --xlayouts='us'
 lang en_US.UTF-8
 
 # Network information
-network  --bootproto=dhcp --device=eth0 --mtu=9000 --nameserver=171.70.168.183,171.68.226.120 --onboot=yes --ipv6=auto --no-activate
+network  --bootproto=dhcp --device=eth0 --mtu=9000 --nameserver=192.168.10.21 --onboot=yes --ipv6=auto --no-activate
 network  --hostname=cishana-su-0
 repo --name="AppStream" --baseurl=file:///run/install/repo/AppStream
 # Root password
@@ -46,6 +46,8 @@ pwpolicy root --minlen=6 --minquality=1 --notstrict --nochanges --notempty
 pwpolicy user --minlen=6 --minquality=1 --notstrict --nochanges --emptyok
 pwpolicy luks --minlen=6 --minquality=1 --notstrict --nochanges --notempty
 %end
+
+# Add ssh key for Ansible control node
 
 %post
 mkdir -m0700 /root/.ssh/
