--- a/nxos/04-configure-nxos-vpc.yml
+++ b/nxos/04-configure-nxos-vpc.yml
@@ -1,37 +1,37 @@
 ---
-# FlexPod HANA Playbook
+# CI SAP HANA Playbook
 #
 - hosts: n9k
   connection: network_cli
   gather_facts: no
   tasks:
-    - name: Configuring vpc Domain, Peer-link and Global Parameters
-      nxos_vpc:
-        domain: "{{ vpc_domain_id }}"
-        role_priority: "{{ vpc_role_priority }}"
-        pkl_src: "{{ vpc_source }}"
-        pkl_dest: "{{ vpc_destination }}"
-        peer_gw: true
-        auto_recovery: true
-        delay_restore: "150"
+#    - name: Configuring vpc Domain, Peer-link and Global Parameters
+#      nxos_vpc:
+#        domain: "{{ vpc_domain_id }}"
+#        role_priority: "{{ vpc_role_priority }}"
+#        pkl_src: "{{ vpc_source }}"
+#        pkl_dest: "{{ vpc_destination }}"
+#        peer_gw: true
+#        auto_recovery: true
+#        delay_restore: "150"
 #
 # This task adds following vpc domain configuration parameters because the ansible function does not support them:
 # ip arp synchronize
 # peer-switch
 #
-    - name: Update VPC domain parameters
-      nxos_config:
-        lines:
-          - peer-switch
-          - ip arp synchronize
-        parents: vpc domain {{ vpc_domain_id }}
+#    - name: Update VPC domain parameters
+#      nxos_config:
+#        lines:
+#          - peer-switch
+#          - ip arp synchronize
+#        parents: vpc domain {{ vpc_domain_id }}
 #
 # Configure VPC Peer-Link
 #
-    - name: Enabling vPC Peer Link on {{ peerlink_PC[0].interface }}
-      nxos_vpc_interface:
-        portchannel: "{{ peerlink_PC[0].id }}"
-        peer_link: true
+#    - name: Enabling vPC Peer Link on {{ peerlink_PC[0].interface }}
+#      nxos_vpc_interface:
+#        portchannel: "{{ peerlink_PC[0].id }}"
+#        peer_link: true
 #
 # VPC configuration on all the port-channels
 #
